name:                cryptopals
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/karlfish/cryptopals#readme
license:             BSD3
license-file:        LICENSE
author:              karl
maintainer:          karlstephanr@gmail.com
copyright:           2017 karl
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cryptopals
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base16-bytestring
                     , base64-bytestring >= 1.0
                     , cryptonite
                     , memory
                     , split
                     , digits
                     , lens
                     , wreq
                     , unordered-containers >= 0.2.8


